# pw

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: rust.yml
src/: main.rs
src/cli/: cli.rs
src/generator/: mod.rs  password.rs  word.rs
src/helper/: encoder.rs  mod.rs  output.rs  phonetics.rs
src/models/: mod.rs  password_output.rs  word.rs
