[package]
name = "pw"
version = "0.1.0"
edition = "2024"
description = "A easy-to-remember password generator with customizable options"
[dependencies]
rand = "0.9.0"
clap = { version = "4.5.37", features = ["derive"] }
rand_chacha = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
sha2 = "0.11.0-pre.5"
bcrypt = "0.17.0"
urlencoding = "2.1"
hex = "0.4.3"
serde_json = "1.0.140"
serde_yml = "0.0.12"
anyhow = "1.0.98"
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false
incremental = false
